--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -61,8 +61,17 @@
                 type="submit"
                 class="btn btn-primary submit-btn btn-block"
                 [disabled]="!formGroup.valid"
+                *ngIf="!cargando"
               >
                 Crear cuenta
+              </button>
+              <button
+                *ngIf="cargando"
+                class="btn btn-primary submit-btn btn-block"
+                disabled
+              >
+                <i class="fa fa-spin fa-sync"></i>
+                Espere...
               </button>
             </div>
             <div class="text-block text-center my-3">
