--- a/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -7,7 +7,7 @@
           Especifique el monto y el tipo
         </p>
 
-        <form>
+        <form [formGroup]="ingresoEgresoForm" (ngSubmit)="submit()">
           <div class="form-group">
             <label>Descripción</label>
             <input
@@ -15,6 +15,7 @@
               class="form-control"
               placeholder="Descripción"
               name="descripcion"
+              formControlName="descripcion"
             />
           </div>
 
@@ -24,6 +25,7 @@
               type="number"
               class="form-control"
               placeholder="Monto"
+              formControlName="monto"
               name="monto"
             />
             <p>
@@ -34,24 +36,39 @@
           <div class="form-group">
             <label>Tipo</label>
             <br />
-            <button type="button" class="btn btn-primary btn-block">
+            <button
+              *ngIf="tipo === 'ingreso'"
+              (click)="tipo = 'egreso'"
+              type="button"
+              class="btn btn-primary btn-block"
+            >
               Ingreso
             </button>
-            <!-- <button type="button" class="btn btn-warning btn-block">Egreso</button> -->
+            <button
+              *ngIf="tipo === 'egreso'"
+              (click)="tipo = 'ingreso'"
+              type="button"
+              class="btn btn-warning btn-block"
+            >
+              Egreso
+            </button>
           </div>
 
           <hr />
-          <button type="button" class="btn btn-success mr-2">
+          <button
+            *ngIf="!cargando"
+            type="submit"
+            class="btn btn-success mr-2"
+            [disabled]="ingresoEgresoForm.invalid"
+          >
             <i class="fa fa-save"></i>
             Agregar
           </button>
 
-          <!-- 
-                <button disabled class="btn btn-success mr-2">
-                  <i class="fa fa-spin fa-sync"></i>
-                  Espere por favor...
-                </button> 
-              -->
+          <button *ngIf="cargando" class="btn btn-primary mr-2" disabled>
+            <i class="fa fa-spin fa-sync"></i>
+            Guardando...
+          </button>
 
           <button type="reset" class="btn btn-light">Cancelar</button>
         </form>
