--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,9 +8,9 @@
           </div>
 
           <div class="text-wrapper">
-            <p class="profile-name">Cristobal Colón</p>
+            <p class="profile-name">{{ usuario?.nombre | titlecase }}</p>
             <div>
-              <small class="designation text-muted">Gerente</small>
+              <small class="designation text-muted">{{ usuario?.email }}</small>
             </div>
           </div>
         </div>
